# Sharing

./: Cargo.toml  build.rs
libs/SharingCore/: Package.swift  README.md
libs/SharingCore/Sources/SharingCore/: SharingCore.swift
libs/SharingCore/Tests/SharingCoreTests/: SharingCoreTests.swift
src/: main.rs  sharing_core.rs
