[package]
name = "Sharing"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
crossbeam = "0.8.1"

[build-dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
bindgen = "0.59.2"